style.css
@charset "utf-8";

/*
	table of contents
	===
	
	→ main layout and page
	→ themes
	→ scrollbar
	→ user fields
	→ blockquote
	→ pre, code, textarea
	→ headings
	→ checkboxes and radio buttons
	→ focus
	→ disabledness
	→ layout settings box
	→ settings: capitalization
	→ settings: guide rulers
	→ lists
	→ paper print
	→ settings: custom typesetting
	→ settings: spacing harmony
	→ settings: optical alignment
	→ not found error page
*/

@font-face
{
	font-family: "Lora";
	font-style: normal;
	font-weight: 400;
	src: url("/fonts/lora.ttf") format("truetype");
	font-display: swap;
}

@font-face
{
	font-family: "Lora";
	font-style: italic;
	font-weight: 400;
	src: url("/fonts/lora-italic.ttf") format("truetype");
	font-display: swap;
}

@font-face
{
	font-family: "Oxygen Mono";
	font-style: normal;
	font-weight: 400;
	src: url("/fonts/oxygen-mono.ttf") format("truetype");
	font-display: swap;
}

@font-face
{
	font-family: "Asap";
	font-style: italic;
	font-weight: 400;
	src: url("/fonts/asap-italic.woff2") format("woff2");
	font-display: swap;
}

/* → main layout and page */

* { box-sizing: border-box; }

::selection { background: var(--highlight-color); }

html
{
	width: 100%;
	height: 100%;
}

body
{
	--text-color: #741;
	--background-color: #FED;
	--highlight-color: #7412;
	font-family: "Lora", serif;
	font-size: 16px;
	background: var(--background-color);
	color: var(--text-color);
	margin: 2em auto;
	padding: 0 2em;
	width: 25em;
	min-width: calc(50% + 4em);
	max-width: 100%;
	overflow-x: hidden;
	overflow-y: scroll;
	line-height: 1.75em;
	text-align: justify;
	position: relative;
	transition: 0.5s ease --background-color, 0.5s ease --text-color;
}

main
{
	padding: 0 2em;
	margin: 0 -2em;
	overflow: hidden;
}

@media (max-width: 800px)
{
	body { text-align: left; }
}

p { margin: 0.75em 0; }

hr
{
	border: none;
	background: var(--text-color);
	mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 0 12 2" stroke="%23000" fill="none" stroke-width="0.125"><path d="M 0 1 C 1 0 3 2 4 1 M 4.5 1.5 5 0.5 M 5.5 1.5 6 0.5 M 6.5 1 C 7.5 0 9.5 2 10.5 1" /></svg>');
	mask-position: center;
	mask-repeat: no-repeat;
	-webkit-mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 0 12 2" stroke="%23000" fill="none" stroke-width="0.125"><path d="M 0 1 C 1 0 3 2 4 1 M 4.5 1.5 5 0.5 M 5.5 1.5 6 0.5 M 6.5 1 C 7.5 0 9.5 2 10.5 1" /></svg>');
	-webkit-mask-position: center;
	-webkit-mask-repeat: no-repeat;
	margin: 1em 0;
	height: 1em;
}

article.response { margin-left: 2em; }

header { font-weight: bold; }

main > footer { font-style: italic; }

.submit { text-align: right; }

small { font-size: 0.75em; }

body > footer
{
	text-align: center;
	font-size: 0.75em;
	content: "";
}

/* → themes */

[data-theme="cocoa"] body
{
	--text-color: #FDA;
	--background-color: #531;
	--highlight-color: #FDA3;
}

[data-theme="milk"] body
{
	--text-color: #532;
	--background-color: #FDFAEE;
	--highlight-color: #5322;
}

[data-theme="coffee"] body
{
	--text-color: #DB8;
	--background-color: #310;
	--highlight-color: #DB83;
}

/* → scrollbar */

::-webkit-scrollbar
{
	background: none;
	width: 0.25em;
	height: 0.25em;
}

::-webkit-scrollbar-track { background: none; }
::-webkit-scrollbar-track-piece { background: none; }
::-webkit-scrollbar-button { display: none; }
::-webkit-scrollbar-corner { background: none; }

::-webkit-scrollbar-thumb
{
	background: var(--text-color);
	border-radius: 1em;
}

/* → user fields */

a, button, select
{
	color: inherit;
	all: unset;
	cursor: pointer;
	text-decoration: underline;
}

option
{
	background: initial;
	color: initial;
}

/* → blockquote */

blockquote
{
	padding: 0 0 0 1em;
	position: relative;
	margin: 0.75em 0;
}

blockquote::before
{
	content: "";
	width: 0.25em;
	margin: 0.5em 0 0.5em;
	background: var(--text-color);
	border-radius: 1em;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
}

/* → pre, code, textarea */

:not(pre) > code
{
	border-radius: 0.25em;
	padding: 0.25em;
	border: 0.0625em solid var(--text-color);
}

code, pre
{
	font-family: "Oxygen Mono", monospace, sans-serif;
}

pre, textarea
{
	padding: 0.5em 0.75em;
	border-radius: 0.5em;
	border: 0.125em solid var(--text-color);
	overflow: auto;
	box-shadow: var(--highlight-color) 0 0 1em inset;
	text-align: left;
}

textarea
{
	text-align: justify;
	background: none;
	color: inherit;
	resize: none;
	width: 100%;
	height: 16em;
	font: unset;
	outline: none;
	transition: 0.125s ease box-shadow;
	display: block;
	line-height: 1.5em;
	padding: 0.75em
}

textarea:not(:focus) { box-shadow: none; }

/* → headings */

h1, h2, h3, h4, h5, h6
{
	font-family: "Asap", sans-serif;
	font-style: italic;
	font-weight: normal;
	margin: 0.75em 0;
	text-align: left;
}

h1 { font-size: 2em; }
h2 { font-size: 1.75em; }
h3 { font-size: 1.5em; }
h4 { font-size: 1.25em; }
h5 { font-size: 1.125em; }
h6 { font-size: 1.0625em; }
h5, h6 { font-weight: bold; }

/* → checkboxes and radio buttons */

input[type="checkbox"],
input[type="radio"]
{
	content: "";
	width: 0.5em;
	height: 0.5em;
	border: 0.0625em solid var(--text-color);
	display: inline-block;
	margin: 0 0.5em 0 0;
	border-radius: 0.125em;
	-moz-appearance: none;
	-webkit-appearance: none;
	appearance: none;
	font: inherit;
	cursor: unset;
	outline: none;
}

.radio-group label { margin-left: 1em; }

input[type="radio"] { border-radius: 100%; }

.radio-group, .radio-group label { display: inline-block; }

input[type="radio"]:checked,
input[type="checkbox"]:checked
{
	background: radial-gradient(var(--text-color) 40%, #0000 40%);
}

.disabled input[type="radio"],
.disabled input[type="checkbox"]
{
	background: none;
}

/* → focus */

a:focus, button:focus,
:not(.radio-group) > label:focus-within,
.radio-group:focus-within,
#display-settings > summary:focus
{
	outline: 0.0625em solid var(--text-color);
}

/* → disabledness */

.disabled
{
	opacity: 0.5;
	pointer-events: none;
}

/* → layout settings box */

@keyframes layout-settings
{
	from { opacity: 0; transform: translate(0, 1em); }
}

#settings
{
	right: 1em;
	top: 2.5em;
	position: absolute;
	border: 0.0625em solid var(--text-color);
	border-radius: 0.5em;
	padding: 0 1em;
	background: var(--background-color);
	max-width: calc(100% - 2em);
	transition: 0.25s ease transform, 0.25s ease opacity;
	box-shadow: #3333 0 0 1em;
	animation: layout-settings ease 0.25s;
	text-align: left;
	pointer-events: initial;
}

label { cursor: pointer; }

#display-settings > summary
{
	display: block;
	text-align: right;
	cursor: pointer;
	outline: none;
	margin: 0 0 0 auto;
	width: max-content;
	text-decoration: underline;
}

#display-settings > summary::-webkit-details-marker { display: none; }

/* → settings: capitalization */

body:not(.capitalization) > main,
body:not(.capitalization) > article > header,
body:not(.capitalization) > main > footer
{
	text-transform: lowercase;
}

/* → settings: guide rulers */

body[data-guide-rulers="3"] { --guide-rulers: 3; }
body[data-guide-rulers="4"] { --guide-rulers: 4; }
body[data-guide-rulers="5"] { --guide-rulers: 5; }

body[data-guide-rulers="3"] > main p,
body[data-guide-rulers="4"] > main p,
body[data-guide-rulers="5"] > main p
{
	background:
		linear-gradient(
			var(--background-color),
			var(--background-color) 1em,
			#0000 1em,
			#0000 calc(100% - 4em),
			var(--background-color) calc(100% - 4em)
		),
		repeating-linear-gradient(
			var(--text-color) 0.0625em,
			var(--text-color) 0.125em,
			#0000 0.125em,
			#0000 calc(var(--guide-rulers) * 1.75em + 0.0625em)
		);
}

/* → lists */

ul, ol, li { display: block; margin: 0.75em 0; }
ul, ol { padding: 0; margin: 0; }
li { margin: 0.5em 0; position: relative; }

blockquote > ul { margin-left: 0.75em; }
blockquote > ol { margin-left: 1.25em; }

li > ul { margin-left: 1em; }
li > ol { margin-left: 1.25em; }

ol { counter-reset: list; }

ul > li::before,
ol > li::before
{
	display: block;
	position: absolute;
	left: 0;
	transform: translate(-100%) translate(-0.5em);
}

ul > li::before
{
	content: "";
	background: var(--text-color);
	mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 4 4"><circle r="1.5" fill="%23741" /></svg>');
	-webkit-mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 4 4"><circle r="1.5" fill="%23741" /></svg>');
	width: 0.5em;
	height: 0.5em;
	top: 0.65em;
}

ol > li::before
{
	counter-increment: list;
	content: counter(list, lower-roman) ") ";
}

/* → paper print */

@media print
{
	* { background: none !important; }
	
	body
	{
		margin: 0;
		padding: 0;
		width: initial;
		text-align: justify;
		--text-color: #000 !important;
		--background-color: #0000 !important;
	}
	
	#settings, #list, #list ~ * { display: none; }
	::-webkit-scrollbar { display: none; }
	
	@media (max-width: 400px)
	{
		body { text-align: left; }
	}
	
	a { text-decoration: none; }
	
	pre { white-space: pre-wrap; }
	
	:not(pre) > code
	{
		background: none;
	}
}

article, blockquote { break-inside: avoid; }

h1, h2, h3, h4, h5, h6 { break-after: avoid; }

@media not print
{
	/* → settings: custom typesetting */
	
	body.typesetting > main .p
	{
		white-space: nowrap;
		text-align-last: justify;
		margin-left: -2em;
		margin-right: -2em;
		background-size: calc(100% - 4em) auto;
		background-repeat: no-repeat repeat;
		background-position: center;
	}
	
	body.typesetting > main .p::after
	{
		content: "";
		display: inline-block;
		width: 100%;
		height: 0;
	}
	
	body.typesetting > main .break > .br::after
	{
		content: "\A";
		white-space: pre;
	}
	
	body.typesetting > main .glue.break > .ws
	{
		display: inline-block;
		white-space: pre;
		width: 0;
	}
	
	body.typesetting > main .glue.break > .ws::selection { background: #0000; }
	
	body.typesetting > main .shy.break::before { content: "\2010" !important; }
	
	/* → settings: optical alignment */
	
	body.typesetting.optical-alignment > main .break::before
	{
		content: "";
		margin-right: calc(2em - var(--pull-left));
		display: inline-block;
	}
	
	body.typesetting.optical-alignment > main .break::after
	{
		content: "";
		margin-left: calc(2em - var(--pull-right));
		display: inline-block;
	}
	
	body.typesetting.optical-alignment > main .p::before
	{
		content: "";
		margin-left: calc(2em - var(--pull-before));
		display: inline-block;
	}
	
	/* → settings: spacing harmony */
	
	body.typesetting.spacing-harmony > main .syllable
	{
		letter-spacing: var(--spacing);
	}
	
	body.typesetting.spacing-harmony > main .shy { letter-spacing: 0; }
	
	body.typesetting.spacing-harmony > main .break::before
	{ margin-left: calc(-1 * var(--spacing, 0)); }
}

/* → not found error page */

.not-found svg
{
	width: 100%;
	max-height: 80vh;
}

.not-found
{
	text-align: center;
}

